k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine-postgres
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: engine-postgres
  template:
    metadata:
      labels:
        name: engine-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:12-alpine
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: postgres
          mountPath: /var/lib/postgresql/12/main
      volumes:
      - name: postgres
        hostPath:
          path: /data/postgre
---
apiVersion: v1
kind: Service
metadata:
  name: engine-postgres
  namespace: default
  labels:
    name: engine-postgres
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    name: engine-postgres
