k8s/simplebank_virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simplebank-svc-vs
spec:
  hosts:
  - simplebank
  gateways:
  - samplebank-gateway
  http:
  - name: "simplebank-route"
    route:
    - destination:
        host: simplebank
        port:
          number: 8090
